--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/TitleLevel.TitleLevel
+GlobalDefaultGameMode=/Script/SimpleIdleGame.TitleGameMode
+EditorStartupMap=/Game/Maps/TitleLevel.TitleLevel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
