apply joystick widget

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,3 +92,10 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/SimpleIdleGame.JoystickWidget",NewName="/Script/SimpleIdleGame.JoystickPanelWidget")
++ClassRedirects=(OldName="/Script/SimpleIdleGame.JoystickUIPanel",NewName="/Script/SimpleIdleGame.JoystickPanelWidget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickUIPanel",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWidget")
++ClassRedirects=(OldName="/Script/SimpleIdleGame.JoystickPanel",NewName="/Script/SimpleIdleGame.JoystickPanelWidget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickPanel",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWidget")
