--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,6 +96,10 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/SimpleIdleGame.JoystickWidget",NewName="/Script/SimpleIdleGame.JoystickPanelWidget")
 +ClassRedirects=(OldName="/Script/SimpleIdleGame.JoystickUIPanel",NewName="/Script/SimpleIdleGame.JoystickPanelWidget")
-+PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickUIPanel",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWidget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickUIPanel",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWdiget")
 +ClassRedirects=(OldName="/Script/SimpleIdleGame.JoystickPanel",NewName="/Script/SimpleIdleGame.JoystickPanelWidget")
-+PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickPanel",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWidget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickPanel",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWdiget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWidget",NewName="/Script/SimpleIdleGame.IngameWidget.WBP_JoystickWdiget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.WBP_JoystickWdiget",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWdiget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickWdiget",NewName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWdiget")
++PropertyRedirects=(OldName="/Script/SimpleIdleGame.IngameWidget.JoystickPanelWidget",NewName="/Script/SimpleIdleGame.IngameWidget.WBP_JoystickWdiget")
